--- a/AsteriskAMIStream/Dockerfile
+++ b/AsteriskAMIStream/Dockerfile
@@ -1,11 +1,12 @@
 # Use a .NET runtime base image that is compatible with your application
-FROM mcr.microsoft.com/dotnet/aspnet:9.0
-
-# Set the working directory in the container
-WORKDIR /app
-
-# Copy the published application into the container
+# Build stage
+FROM mcr.microsoft.com/dotnet/sdk:9.0-preview AS build
+WORKDIR /src
 COPY . .
+RUN dotnet publish -c Release -o /app
 
-# Define the entry point for your application
+# Runtime stage
+FROM mcr.microsoft.com/dotnet/aspnet:9.0-preview
+WORKDIR /app
+COPY --from=build /app .
 ENTRYPOINT ["dotnet", "AsteriskAMIStream.dll"]
