--- a/.github/workflows/setVersion.yml
+++ b/.github/workflows/setVersion.yml
@@ -12,14 +12,6 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: List build folder contents
-        run: |
-            echo "=== Root ==="
-            ls -al
-            echo "=== _site ==="
-            ls -al _site || true
-            echo "=== dist ==="
-            ls -al dist || true
       - name: Generate version timestamp
         run: echo "{\"version\":\"$(date -u +%Y-%m-%dT%H:%M:%SZ)\"}" > version.json
 
@@ -29,5 +21,6 @@ jobs:
           git config user.email "actions@github.com"
           git add version.json
           git commit -m "Update version.json" || echo "No changes to commit"
-          git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}.git
+          git push "https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}.git"
+
 
