--- a/.github/workflows/setVersion.yml
+++ b/.github/workflows/setVersion.yml
@@ -7,19 +7,21 @@ on:
 jobs:
   update-version:
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
 
-      - name: Set version
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GH_PAT }}
+
+      - name: Set version timestamp
         run: echo "$(date -u +%Y-%m-%dT%H:%M:%SZ)" > version.json
 
-      - name: Commit and Push version.json
-        env:
-          GH_PAT: ${{ secrets.GH_PAT }}
+      - name: Commit and push version.json
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
+          
           git add version.json
           git commit -m "Update version.json" || echo "No changes to commit"
-          git push https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}.git HEAD:main
+          git push origin HEAD:main
