--- a/.github/workflows/setVersion.yml
+++ b/.github/workflows/setVersion.yml
@@ -15,7 +15,9 @@ jobs:
           token: ${{ secrets.GH_PAT }}
 
       - name: Set version timestamp
-        run: echo "$(date -u +%Y-%m-%dT%H:%M:%SZ)" > version.json
+        run: |
+          VERSION=$(date -u +%Y-%m-%dT%H:%M:%SZ)
+          echo "{\"version\":\"$VERSION\"}" > version.json
 
       - name: Commit and push version.json
         run: |
